--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,67 @@ ul li a {
 
 
 
+/* changes habits secion style start */
+.change-habits {
+    text-align: center;
+    margin-top: 110px;
+}
+
+.change-habit-title {
+    font-size: 3rem;
+}
+
+.change-habits p {
+    margin-top: 14px;
+    margin-bottom: 48px;
+}
+
+.habit-grides {
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.grid img {
+    border-radius: 50%;
+    border: 4px solid rgb(89, 87, 87);
+}
+
+.grid h4 {
+    font-size: 1.125rem;
+    margin-top: 30px;
+    color: white;
+}
+
+.grid p {
+    font-size: 0.875rem;
+    margin-top: 6px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+/* your habit responsive*/
+
+@media screen and (max-width: 576px) {
+    .habit-grides {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grid {
+        margin: 13px auto;
+    }
+
+    .change-habit-title {
+        font-size: 2rem;
+    }
+
+}
+
+/* changes habits secion style end */
+
+
+
+
 /* extra mile section style start */
 .extra-mile {
     border-radius: 18px;
