--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,15 @@ body {
     font-weight: 900;
 }
 
+.primary-btn {
+    padding: 0.7rem 1.2rem;
+    background-color: rgb(255, 84, 0);
+    border-radius: 38px;
+    border: 1px solid rgb(255, 84, 0);
+    font-weight: 800;
+    color: white;
+}
+
 /* common shared style end */
 /* header style start */
 .header-bg {
@@ -127,6 +136,172 @@ ul li a {
     margin-bottom: 28px;
 }
 
+button {
+    margin-right: 14px;
+}
+
+.btn {
+    background-color: transparent;
+    border: 2px solid rgb(255, 255, 255);
+}
+
+.badge-box {
+    height: 60px;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 600;
+    backdrop-filter: blur(20px);
+}
+
+.para {
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.65);
+    letter-spacing: 2px;
+}
+
+.banner-img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.badge-1 {
+    padding: 12px 20px;
+    font-weight: 500;
+    margin-left: 227px;
+    margin-top: -450px;
+    position: absolute;
+    line-height: 1;
+
+}
+
+.badge-2 {
+    display: flex;
+    padding: 18px 22px 10px;
+    font-weight: 500;
+    margin-left: -90px;
+    margin-top: -170px;
+    position: absolute;
+    line-height: 1;
+}
+
+.circle {
+    width: 40px;
+    height: 40px;
+    background: rgb(230, 83, 60);
+    border-radius: 50%;
+    text-align: center;
+    margin-right: 10px;
+    margin-top: 3px;
+}
+
+.five-plus {
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+.three-plus {
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+
+
+.three-dot {
+    display: none;
+}
+
+/* banner media query start */
+@media screen and (max-width: 576px) {
+    .navbar {
+        width: 90%;
+        margin: 0rem auto;
+
+    }
+
+    h3 {
+        font-size: 28px;
+    }
+
+    ul li {
+        display: none;
+    }
+
+    .three-dot {
+        display: block;
+    }
+
+    .three-dot i {
+        font-size: 26px;
+    }
+
+    /* Banner section */
+    .banner {
+        display: flex;
+        width: 90%;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    .banner-content h2 {
+        font-size: 36px;
+        margin-top: 51px;
+    }
+
+    .span-title {
+        font-size: 36px;
+    }
+
+    .secondary-color {
+        font-size: 16px;
+        width: 260px;
+    }
+
+    .primary-btn {
+        padding: 0.7rem 0.9rem;
+    }
+
+    /* Banner right */
+    .badge-box {
+        height: 50px;
+        width: 83px;
+    }
+
+    .badge-1 {
+        margin-left: 180px;
+        margin-top: -510px;
+    }
+
+    .badge-2 {
+        margin-left: 30px;
+        margin-top: -320px;
+        width: 110px;
+    }
+
+    .five-plus {
+        font-size: 28px;
+        font-weight: 700;
+    }
+
+    .three-plus {
+        font-size: 18px;
+        font-weight: 700;
+    }
+
+    .banner-img {
+        width: 80%;
+    }
+
+    .para {
+        font-size: 8px;
+        letter-spacing: 0px;
+    }
+
+}
+
+/* banner media query end */
+
 /* banner section style end */
 
 
@@ -169,7 +344,7 @@ ul li a {
     color: rgba(255, 255, 255, 0.5);
 }
 
-/* your habit responsive*/
+/* change habits media query start */
 
 @media screen and (max-width: 576px) {
     .habit-grides {
@@ -186,6 +361,8 @@ ul li a {
     }
 
 }
+
+/* change habits media query end */
 
 /* changes habits secion style end */
 
