--- a/styles/style.css
+++ b/styles/style.css
@@ -560,6 +560,10 @@ select {
         flex-direction: column;
     }
 
+    .bmi-title {
+        font-size: 2rem;
+    }
+
     .chart-container {
         width: 100%;
         /* height: 555px; */
@@ -639,6 +643,7 @@ select {
 
     .card-container {
         grid-template-columns: repeat(1, 1fr);
+
     }
 }
 
